--- a/config.sample
+++ b/config.sample
@@ -3,6 +3,7 @@ config = {
     # AWS credentials for the IAM user (alternatively can be set up as environment variables)
     'aws_access_key': 'xxxxxxxx',
     'aws_secret_key': 'xxxxxxxxxxxx',
+    'iam_role_arn': '',
 
     # EC2 info about your server's region
     'ec2_region_name': 'eu-west-1',
